# GameEngine

./: CMakeLists.txt  conanfile.txt
Examples/Hello3D/: CMakeLists.txt  dllmain.cpp
Examples/Hello3D/Data/: .assetList
Examples/Hello3D/Data/Shaders/: Cube1.frag
Examples/Hello3D/Materials/: Cube1.mat  Cube2.mat
Examples/Hello3D/Shaders/: Cube2.frag
Examples/SimpleGame/: CMakeLists.txt  dllmain.cpp
Source/: assets.cmake
Source/GameFramework/: CMakeLists.txt  GameFramework.hpp
Source/GameFramework/Assets/: Asset.cpp  Asset.hpp  AssetCache.cpp  AssetCache.hpp  AssetSlot.cpp  AssetSlot.hpp  AssetsRegistry.cpp  AssetsRegistry.hpp  Utils.cpp  Utils.hpp
Source/GameFramework/Files/: DirectoryMountPoint.cpp  FileManager.cpp  FileManager.hpp  FileStream.hpp  MountPoint.hpp  StandardFileStream.cpp
Source/GameFramework/Game/: Async.cpp  Async.hpp  Math.hpp
Source/GameFramework/Input/: InputController.cpp
Source/GameFramework/PluginInterfaces/: RenderPlugin.hpp
Source/GameFramework/Render/: Color.hpp  RenderPrimitive.hpp  Scene2d.hpp  Scene3d.hpp
Source/GameFramework/Render/Primitive2d/: Rect2d.cpp  Rect2d.hpp
Source/GameFramework/Render/Primitive3d/: Camera.cpp  Camera.hpp  Cube.cpp  Cube.hpp
Source/GameFramework/Tests/: CMakeLists.txt  Test_Assets.cpp  Test_Files.cpp
Source/GameFramework/Utility/: Crypto.cpp  Crypto.hpp  Hash.hpp  Heterogeneous.hpp  OwnedBy.hpp  ProcessRunner.cpp  ProcessRunner.hpp  StringUtils.hpp  TypeMapping.hpp  Utility.hpp  Uuid.cpp  Uuid.hpp
Source/GlfwWindowPlugin/: CMakeLists.txt
Source/Launcher/: CMakeLists.txt  main.cpp
Source/RenderPlugin_RHI/: CMakeLists.txt  ScreenDevice.cpp  ScreenDevice.hpp  dllmain.cpp
Source/RenderPlugin_RHI/Assets/: .assetList
Source/RenderPlugin_RHI/Assets/Materials/: NullMaterial.mat
Source/RenderPlugin_RHI/Assets/Shaders/: NullShader.frag
Source/RenderPlugin_RHI/Assets/Shaders/2D/: background.frag  background.vert  rect2d.vert
Source/RenderPlugin_RHI/Assets/Shaders/3D/: Cube.vert
Source/RenderPlugin_RHI/Common/: Pipeline.hpp  PipelineSettings.hpp  RenderBatch.hpp  Renderer.hpp  SceneBase.hpp
Source/RenderPlugin_RHI/Devices/: InternalDeviceInterface.hpp  ScreenDevice.cpp  ScreenDevice.hpp
Source/RenderPlugin_RHI/Render2D/: Primitives.hpp  Scene2D_CPU.cpp  Scene2D_CPU.hpp  Scene2D_GPU.cpp  Scene2D_GPU.hpp
Source/RenderPlugin_RHI/Render2D/Renderer/: BackgroundRenderer.cpp  BackgroundRenderer.hpp  Rect2dRenderer.cpp  Rect2dRenderer.hpp
Source/RenderPlugin_RHI/Render3D/: Primitives.hpp  Scene3D_CPU.cpp  Scene3D_CPU.hpp  Scene3D_GPU.cpp  Scene3D_GPU.hpp
Source/RenderPlugin_RHI/Render3D/Renderer/: CubeRenderer.cpp  CubeRenderer.hpp
Source/RenderPlugin_RHI/Resources/: CompileSpirV.cmake  Material.cpp  Material.hpp  MaterialCache.cpp  MaterialCache.hpp  MaterialManager.cpp  MaterialManager.hpp  ShaderFile.cpp  ShaderFile.hpp  ShadersCache.cpp  ShadersCache.hpp
