set(test_target ${this_target}_Tests)

add_executable(${test_target})
target_sources(${test_target}
PUBLIC
	"Test_StaticString.cpp"
	"Test_Storage.cpp"
	"Test_Files.cpp"
	"Test_Assets.cpp"
)

find_package(Catch2 REQUIRED)

target_link_libraries(${test_target}  PRIVATE
	Catch2::Catch2WithMain
	GameFramework
)
add_test(NAME ${this_target} COMMAND $<TARGET_FILE:${this_target}>)